# rust-service-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/kafka/: mod.rs
src/kafka/consumer/: mod.rs
src/kafka/producer/: mod.rs
src/test/: mod.rs
