[package]
name = "price_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rdkafka = { version = "0.28", features = ["cmake-build"] }
log = "0.4.1"