[package]
name = "price_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

actix-web = "4.1.0"
r2d2 = "0.8.10"
env_logger = "0.9.0"
serde_derive = "1.0"
rdkafka = { version = "0.28", features = ["cmake-build"] }

kafka_lib = { path = "../libs/kafka_lib"}
kafka_message = { path = "../libs/kafka_message"}
actix_health = { path = "../libs/actix_health"}

